--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>My world page</title>
-  <!-- We need this line below for responsiveness! -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <!-- code a Hero / Banner section -->
+  <!-- first pack -->
+  <!-- first banner -->
   <div class="banner" style="background-image: linear-gradient(rgba(15,60,66,0.4), rgba(0,0,0,0)), url(https://upload.wikimedia.org/wikipedia/commons/8/81/ARAGO_Francois_Astronomie_Populaire_T3_djvu_0192_Fig244.png)">
     <div class="container">
       <h1>What a world !</h1>
@@ -17,7 +17,7 @@
     </div>
   </div>
 
-  <!-- code a "How it works" section -->
+  <!-- first cards -->
   <div class="container">
     <h2 class="text-center"> Go go go !</h2>
     <div class="cards">
