boutontons en plus

--- a/index3.html
+++ b/index3.html
@@ -2,30 +2,24 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>My UI kit</title>
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
-
-
-  <link rel="stylesheet" href="css/style2.css">
+  <title>My world page</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class="container">
-  <!-- code a Hero / Banner section -->
-    <h1 class="text-center">Boutontons</h1>
-    <div class="header">
+  <!-- first pack -->
+  <!-- first banner -->
+  <div class="banner" style="background-image: linear-gradient(rgba(15,60,66,0.4), rgba(0,0,0,0)), url(https://upload.wikimedia.org/wikipedia/commons/8/81/ARAGO_Francois_Astronomie_Populaire_T3_djvu_0192_Fig244.png)">
+    <div class="container">
+      <h1>What a world !</h1>
+      <p>Change your life and learn to travell around the world.</p>
       <a class="btn-yellow" href="#">Go now!</a>
-      <a class="btn-medium" href="#">Bim bam boum</a>
-      <a class="btn-treehouse" href="#">Ratatatata</a>
-      <a class="btn-lobster" href="#">tchik, tchiky boom</a>
-      <a class="btn-neon" href="#">Dzzzzziiiion</a>
     </div>
+  </div>
 
-  <!-- code a "How it works" section -->
-    <br>
-    <br>
-    <hr>
-    <hr>
-    <h2 class="text-center">Cards</h2>
+  <!-- first cards -->
+  <div class="container">
+    <h2 class="text-center"> Go go go !</h2>
     <div class="cards">
 
       <div class="card-trip">
@@ -50,7 +44,7 @@
   </div>
 
   <!-- code a footer -->
-   <div class="footer" style="background-image: linear-gradient(rgba(255,232,55,0), rgba(255,232,55,1)">
+  <div class="footer" style="background-image: linear-gradient(rgba(255,232,55,0), rgba(255,232,55,1)">
     <div class="links">
       <a href="#"><i class="fab fa-fw fa-facebook-f"></i></a>
       <a href="#"><i class="fab fa-fw fa-github"></i></a>
