--- a/index.html
+++ b/index.html
@@ -45,21 +45,38 @@
         <h4>Go to the Middle Earth!</h4>
         <p>Pourquoi pas.</p>
       </div>
-
     </div>
-  </div>
+    <br>
+    <br>
+    <hr>
+    <hr>
 
+    <h2 class="text-center">Others Cards</h2>
+    <div class="cards2">
+
+      <div class="card-category" style="background-image: url(https://picsum.photos/200), linear-gradient(rgba(255,232,55,0), rgba(255,232,55,1)">
+        <h2>Super cool</h2>
+      </div>
+
+      <div class="card-category" style="background-image: url(https://picsum.photos/200), linear-gradient(rgba(255,232,55,0), rgba(255,232,55,1)">
+        <h2>Super cool</h2>
+      </div>
+
+      <div class="card-category" style="background-image: url(https://picsum.photos/200), linear-gradient(rgba(255,232,55,0), rgba(255,232,55,1)">
+        <h2>Super cool</h2>
+      </div>
+    </div>
+
+  </div>
   <!-- code a footer -->
-   <div class="footer" style="background-image: linear-gradient(rgba(255,232,55,0), rgba(255,232,55,1)">
+  <div class="footer" style="background-image: linear-gradient(rgba(255,232,55,0), rgba(255,232,55,1)">
     <div class="links">
       <a href="#"><i class="fab fa-fw fa-facebook-f"></i></a>
       <a href="#"><i class="fab fa-fw fa-github"></i></a>
       <a href="#"><i class="fab fa-fw fa-twitter"></i></a>
       <a href="#"><i class="fab fa-fw fa-instagram"></i></a>
       <p>This website was coded with <i class="fas fa-heart"></i> at Le Wagon.</p>
-
     </div>
   </div>
-
 </body>
 </html>
