--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
 
 
-  <link rel="stylesheet" href="css/style2.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div class="container">
@@ -41,7 +41,7 @@
       </div>
 
       <div class="card-trip">
-        <img src="https://cpcrulez.fr/GamesBonus/War_in_Middle_Earth__(INLAY_MAP).jpg" alt="">
+        <img src="https://picsum.photos/400" alt="">
         <h4>Go to the Middle Earth!</h4>
         <p>Pourquoi pas.</p>
       </div>
@@ -65,6 +65,47 @@
       <div class="card-category" style="background-image: url(https://picsum.photos/200), linear-gradient(rgba(255,232,55,0), rgba(255,232,55,1)">
         <h2>Super cool</h2>
       </div>
+    </div>
+
+    <br>
+    <br>
+    <hr>
+    <hr>
+
+    <h2 class="text-center">Differents Cards</h2>
+    <div class="cards3">
+      <div class="card-product">
+        <img src="https://picsum.photos/100">
+        <div class="card-product-infos">
+          <h2>Product name</h2>
+          <p>Product description with <strong>relevant info</strong> only.</p>
+        </div>
+      </div>
+
+      <div class="card-product">
+        <img src="https://picsum.photos/100">
+        <div class="card-product-infos">
+          <h2>Product name</h2>
+          <p>Product description with <strong>relevant info</strong> only.</p>
+        </div>
+      </div>
+
+      <div class="card-product">
+        <img src="https://picsum.photos/100">
+        <div class="card-product-infos">
+          <h2>Product name</h2>
+          <p>Product description with <strong>relevant info</strong> only.</p>
+        </div>
+      </div>
+
+      <div class="card-product">
+        <img src="https://picsum.photos/100">
+        <div class="card-product-infos">
+          <h2>Product name</h2>
+          <p>Product description with <strong>relevant info</strong> only.</p>
+        </div>
+      </div>
+
     </div>
 
   </div>
