--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
   <!-- dans navbar, y a bar -->
+  <!-- Attention dépendance du code des avatars -->
   <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
     <!-- pour cliquer sur le logo à gauche -->
     <a class="navbar-brand" href="#">
@@ -64,6 +65,26 @@
       <a class="btn-lobster" href="#">tchik, tchiky boom</a>
       <a class="btn-neon" href="#">Dzzzzziiiion</a>
     </div>
+
+    <!-- search bar pour chercher plein de choses -->
+    <!-- Attention, dependance du code du bouton jaune  -->
+    <br>
+    <br>
+    <hr>
+    <hr>
+    <h2 class="text-center">Search bar</h2>
+    <br>
+    <!-- <%= simple_form_for :search, url: root_path, method: :get do |f| %>
+     -->
+    <form novalidate="novalidate" class="simple_form search" action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
+      <div class="search-form-control form-group">
+        <input class="form-control string required" type="text" name="search[query]" id="search_query" />
+        <button name="button" type="submit" class="btn btn-yellow search">
+          <i class="fas fa-search"></i> Search
+        </button>
+      </div>
+    </form>
+    <!-- <% end %> -->
 
     <!-- des avatars -->
     <br>
@@ -179,7 +200,7 @@
 
   </div>   <!-- fin de div du container -->
   <!-- un footer -->
-  <div class="footer" style="background-image: linear-gradient(rgba(255,232,55,0), rgba(255,232,55,1)">
+  <div class="footer">
     <div class="links">
       <a href="#"><i class="fab fa-fw fa-facebook-f"></i></a>
       <a href="#"><i class="fab fa-fw fa-github"></i></a>
