--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     <hr>
     <h2 class="text-center">Search bar</h2>
     <br>
+
     <!-- <%= simple_form_for :search, url: root_path, method: :get do |f| %>
      -->
     <form novalidate="novalidate" class="simple_form search" action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
@@ -85,6 +86,29 @@
       </div>
     </form>
     <!-- <% end %> -->
+
+    <!-- try some pacman fun -->
+    <br>
+    <div class="cadre-pacman">
+      <div class=game>
+        <div class=pacman>
+          <div class=pacman-top></div>
+          <div class=pacman-bottom></div>
+        </div>
+        <div class=dots-list>
+          <div class=dot></div>
+          <div class=dot></div>
+          <div class=dot></div>
+          <div class=dot></div>
+          <div class=dot></div>
+          <div class=dot></div>
+          <div class=dot></div>
+          <div class=dot></div>
+          <div class=dot></div>
+        </div>
+      </div>
+    </div>
+    <!-- end of pacman fun -->
 
     <!-- des avatars -->
     <br>
