--- a/index.html
+++ b/index.html
@@ -166,15 +166,15 @@
     <br>
     <div class="cards2">
 
-      <div class="card-category" style="background-image: url(https://picsum.photos/200), linear-gradient(rgba(255,232,55,0), rgba(255,232,55,1)">
+      <div class="card-category" style="background-image: url(https://picsum.photos/300), linear-gradient(rgba(255,232,55,0), rgba(255,232,55,1)">
         <h2>Super cool</h2>
       </div>
 
-      <div class="card-category" style="background-image: url(https://picsum.photos/200), linear-gradient(rgba(255,232,55,0), rgba(255,232,55,1)">
+      <div class="card-category" style="background-image: url(https://picsum.photos/300), linear-gradient(rgba(255,232,55,0), rgba(255,232,55,1)">
         <h2>Super cool</h2>
       </div>
 
-      <div class="card-category" style="background-image: url(https://picsum.photos/200), linear-gradient(rgba(255,232,55,0), rgba(255,232,55,1)">
+      <div class="card-category" style="background-image: url(https://picsum.photos/300), linear-gradient(rgba(255,232,55,0), rgba(255,232,55,1)">
         <h2>Super cool</h2>
       </div>
     </div>
@@ -188,7 +188,7 @@
     <br>
     <div class="cards3">
       <div class="card-product">
-        <img src="https://picsum.photos/100">
+        <img src="https://picsum.photos/200">
         <div class="card-product-infos">
           <h2>Product name</h2>
           <p>Product description with <strong>relevant info</strong> only.</p>
@@ -196,7 +196,7 @@
       </div>
 
       <div class="card-product">
-        <img src="https://picsum.photos/100">
+        <img src="https://picsum.photos/200">
         <div class="card-product-infos">
           <h2>Product name</h2>
           <p>Product description with <strong>relevant info</strong> only.</p>
@@ -204,7 +204,7 @@
       </div>
 
       <div class="card-product">
-        <img src="https://picsum.photos/100">
+        <img src="https://picsum.photos/200">
         <div class="card-product-infos">
           <h2>Product name</h2>
           <p>Product description with <strong>relevant info</strong> only.</p>
@@ -212,7 +212,7 @@
       </div>
 
       <div class="card-product">
-        <img src="https://picsum.photos/100">
+        <img src="https://picsum.photos/200">
         <div class="card-product-infos">
           <h2>Product name</h2>
           <p>Product description with <strong>relevant info</strong> only.</p>
@@ -231,6 +231,7 @@
       <a href="#"><i class="fab fa-fw fa-instagram"></i></a>
       <p>This website was coded with <i class="fas fa-heart"></i> at Le Wagon.</p>
     </div>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffd700" fill-opacity="1" d="M0,160L0,128L46.5,128L46.5,0L92.9,0L92.9,192L139.4,192L139.4,160L185.8,160L185.8,128L232.3,128L232.3,128L278.7,128L278.7,288L325.2,288L325.2,64L371.6,64L371.6,288L418.1,288L418.1,160L464.5,160L464.5,32L511,32L511,256L557.4,256L557.4,0L603.9,0L603.9,288L650.3,288L650.3,160L696.8,160L696.8,192L743.2,192L743.2,224L789.7,224L789.7,288L836.1,288L836.1,96L882.6,96L882.6,64L929,64L929,288L975.5,288L975.5,160L1021.9,160L1021.9,320L1068.4,320L1068.4,32L1114.8,32L1114.8,256L1161.3,256L1161.3,288L1207.7,288L1207.7,32L1254.2,32L1254.2,0L1300.6,0L1300.6,32L1347.1,32L1347.1,96L1393.5,96L1393.5,128L1440,128L1440,320L1393.5,320L1393.5,320L1347.1,320L1347.1,320L1300.6,320L1300.6,320L1254.2,320L1254.2,320L1207.7,320L1207.7,320L1161.3,320L1161.3,320L1114.8,320L1114.8,320L1068.4,320L1068.4,320L1021.9,320L1021.9,320L975.5,320L975.5,320L929,320L929,320L882.6,320L882.6,320L836.1,320L836.1,320L789.7,320L789.7,320L743.2,320L743.2,320L696.8,320L696.8,320L650.3,320L650.3,320L603.9,320L603.9,320L557.4,320L557.4,320L511,320L511,320L464.5,320L464.5,320L418.1,320L418.1,320L371.6,320L371.6,320L325.2,320L325.2,320L278.7,320L278.7,320L232.3,320L232.3,320L185.8,320L185.8,320L139.4,320L139.4,320L92.9,320L92.9,320L46.5,320L46.5,320L0,320L0,320Z"></path></svg>
   </div>
 </body>
 </html>
